Add conda. Bump version. Add requirements to setup.py

--- a/pyspglib/conda/meta.yaml
+++ b/pyspglib/conda/meta.yaml
@@ -1,9 +1,10 @@
 package:
   name: pyspglib
-  version: !!str 1.8.0
+  version: !!str 1.8.3.1
 
 source:
   git_url: git@github.com:jochym/spglib.git
+  git_tag: v1.8.3.1
 #  patches:
    # List any patch files here
    # - fix.patch
