--- a/pyspglib/conda/.binstar.yml
+++ b/pyspglib/conda/.binstar.yml
@@ -1,7 +1,7 @@
 
 ## The package attribure specifies a binstar package namespace to build the package to. 
 ## This can be specified here or on the command line
-package: spglib
+package: pyspglib
 
 ## You can also specify the account to upload to,
 ## you must be an admin of that account, this 
@@ -19,10 +19,12 @@ package: spglib
 # platform: 
 #  - linux-64
 #  - linux-32
+
 ## The engine are the inital conda packages you want to run with 
 engine:
  - python=2
  - python=3
+ - python=3.4
 ## The env param is an environment variable list 
 # engine:
 #  - MY_ENV=A CC=gcc
@@ -37,18 +39,21 @@ engine:
 ## Run before the script
 # before_script:
 #   - echo "before_script!"
+
 ## Put your main computations here!  
 script:
-  - echo "This is my binstar build!"
   - conda update -n root conda-build
   - conda build .
+
 ## This will run after the script regardless of the result of script
 ## BINSTAR_BUILD_RESULT=[succcess|failure] 
 after_script:
   - echo "The build was a $BINSTAR_BUILD_RESULT" | tee artifact1.txt
+
 ## This will be run only after a successfull build
 after_success:
   - echo "after_success!"
+
 ## This will be run only after a build failure
 after_failure:
   - echo "after_failure!"
@@ -76,3 +81,5 @@ after_failure:
 ## e.g. conda is an alias for /opt/anaconda/conda-bld/<os-arch>/*.tar.bz2
 build_targets:
   - conda
+#  - pypi
+
