--- a/pyspglib/conda/.binstar.yml
+++ b/pyspglib/conda/.binstar.yml
@@ -43,6 +43,8 @@ engine:
 ## Put your main computations here!  
 script:
   - conda update -n root conda-build
+  - pwd
+  - ls -l
   - conda build .
 
 ## This will run after the script regardless of the result of script
