--- a/pyspglib/conda/meta.yaml
+++ b/pyspglib/conda/meta.yaml
@@ -4,7 +4,7 @@ package:
 
 source:
   git_url: git@github.com:jochym/spglib.git
-  git_tag: v1.8.3.1
+#  git_tag: v1.8.3.1
 #  patches:
    # List any patch files here
    # - fix.patch
