--- a/pyspglib/conda/meta.yaml
+++ b/pyspglib/conda/meta.yaml
@@ -1,5 +1,5 @@
 package:
-  name: spglib
+  name: pyspglib
   version: !!str 1.8.3.1
 
 source:
@@ -10,7 +10,7 @@ source:
    # - fix.patch
 
 build:
-  #preserve_egg_dir: True
+  preserve_egg_dir: True
   #entry_points:
     # Put any entry points (scripts to be generated automatically) here. The
     # syntax is module:function.  For example
@@ -22,7 +22,7 @@ build:
 
   # If this is a new build for the same version, increment the build
   # number. If you do not include this key, it defaults to 0.
-  number: 1
+  number: 2
 
 requirements:
   build:
@@ -52,8 +52,8 @@ test:
 
 about:
   home: http://spglib.sourceforge.net/
-  license: New BSD after version 1.0.beta-1. The older versions are under GPLv2
-  summary: 'This is the spglib module.'
+  license: BSD
+  summary: 'Space symmetry groups spglib module.'
 
 # See
 # http://docs.continuum.io/conda/build.html for
