--- a/pyspglib/conda/meta.yaml
+++ b/pyspglib/conda/meta.yaml
@@ -3,7 +3,7 @@ package:
   version: !!str 1.8.3.1
 
 source:
-  git_url: git@github.com:jochym/spglib.git
+  git_url: https://github.com/jochym/spglib.git
 #  git_tag: v1.8.3.1
 #  patches:
    # List any patch files here
