--- a/python/conda/.binstar.yml
+++ b/python/conda/.binstar.yml
@@ -44,6 +44,8 @@ engine:
 script:
   - conda update -n root conda conda-build
   - conda build .
+  - conda install -c jochym setuptools_scm
+  - bash update_versions.sh
 
 ## This will run after the script regardless of the result of script
 ## BINSTAR_BUILD_RESULT=[succcess|failure] 
