--- a/python/conda/meta.yaml
+++ b/python/conda/meta.yaml
@@ -1,10 +1,10 @@
 package:
   name: spglib
-  version: !!str 1.9.0
+#  version: !!str 1.9.0
 
 source:
   git_url: https://github.com/jochym/spglib.git
-  #git_tag: v1.9.0
+#  git_tag: v1.9.0
 #  patches:
    # List any patch files here
    # - fix.patch
@@ -21,7 +21,7 @@ build:
 
   # If this is a new build for the same version, increment the build
   # number. If you do not include this key, it defaults to 0.
-  number: 2
+  number: 1
 
 requirements:
   build:
