--- a/python/conda/.binstar.yml
+++ b/python/conda/.binstar.yml
@@ -37,13 +37,11 @@ engine:
 #===============================================================================
 
 ## Run before the script
-before_script:
-  - conda update -n root conda conda-build
-  - conda install -c jochym setuptools_scm
-  - bash update_versions.sh
+#before_script:
 
 ## Put your main computations here!  
 script:
+  - conda update -n root conda conda-build
   - conda build .
 
 ## This will run after the script regardless of the result of script
