--- a/python/conda/meta.yaml
+++ b/python/conda/meta.yaml
@@ -43,6 +43,8 @@ test:
   commands:
     # You can put test commands to be run here.  Use this to test that the
     # entry points work.
+    - pwd
+    - ls -l
     - python test/test_spglib.py
 
   # You can also put a file called run_test.py in the recipe that will be run
