--- a/python/conda/meta.yaml
+++ b/python/conda/meta.yaml
@@ -1,7 +1,7 @@
 package:
   name: spglib
 # Manual version string. We use git describe in buildsh for version numbers.
-#  version: !!str 1.9.0
+  version: {{ environ.get('GIT_DESCRIBE_TAG', '') }}
 
 source:
   git_url: https://github.com/jochym/spglib.git
@@ -24,7 +24,7 @@ build:
 
   # If this is a new build for the same version, increment the build
   # number. If you do not include this key, it defaults to 0.
-  number: 1
+  number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
 
 requirements:
   build:
@@ -40,12 +40,18 @@ test:
   imports:
     - spglib
 
+#  files:
+#    - {{ environ.get('SRC_DIR', '') }}/python/test/
+#    - ../test/test_spglib.py
+#    - ../test/vasp.py
+#    - ../test/atoms.py
+
   commands:
     # You can put test commands to be run here.  Use this to test that the
     # entry points work.
     - pwd
     - ls -l
-    - python test/test_spglib.py
+ #   - python test_spglib.py
 
   # You can also put a file called run_test.py in the recipe that will be run
   # at test time.
