--- a/python/conda/meta.yaml
+++ b/python/conda/meta.yaml
@@ -1,7 +1,7 @@
 package:
   name: spglib
 # Manual version string. We use git describe in buildsh for version numbers.
-  version: {{ environ.get('GIT_DESCRIBE_TAG', '') }}
+#  version: {{ environ.get('GIT_DESCRIBE_TAG', '') }}
 
 source:
   git_url: https://github.com/jochym/spglib.git
