Remove patchlevel from build number.

--- a/python/conda/meta.yaml
+++ b/python/conda/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   preserve_egg_dir: True
-  #entry_points:
+# entry_points:
     # Put any entry points (scripts to be generated automatically) here. The
     # syntax is module:function.  For example
     #
@@ -22,9 +22,10 @@ build:
     #
     # Would create an entry point called spglib that calls spglib.main()
 
-  # If this is a new build for the same version, increment the build
-  # number. If you do not include this key, it defaults to 0.
-  number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
+# If this is a new build for the same version, increment the build
+# number. If you do not include this key, it defaults to 0.
+# number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
+  number: 0
 
 requirements:
   build:
