Use get_nanoversion script to extract versioning.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
     - pwd
     - git branch -v
     - git describe --tags --dirty
-    - git describe --tags --dirty | sed -e 's/\([.0-9]*\)-\(.*\)-g.*/\2/' -e 's/^v//g' > __nanoversion__.txt
+    - ./get_nanoversion.sh
     - cat __nanoversion__.txt
     - ln -s ../src .
     - python setup.py install 
