Move the prerel->rc, port settings from phonopy to spglib

--- a/python/conda/.binstar.yml
+++ b/python/conda/.binstar.yml
@@ -24,11 +24,12 @@ package: spglib
 engine:
  - python=2
  - python=3
- - python=3.4
 ## The env param is an environment variable list 
 # engine:
 #  - MY_ENV=A CC=gcc
 #  - MY_ENV=B
+env:
+  - GIT_BRANCH=master
 
 #===============================================================================
 # Scrip options
@@ -42,6 +43,7 @@ engine:
 ## Put your main computations here!  
 script:
   - conda update -n root conda conda-build
+  - GIT_BRANCH=`git branch |grep '^*'|sed -e 's/^*\s\?//' -e 's/(HEAD [a-z ]* \(.*\))$/\1/'`
   - conda build .
 
 ## This will run after the script regardless of the result of script
