--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ deploy:
     - provider: script
       skip_cleanup: true
     # script: anaconda -t $ANACONDA_TOKEN build trigger --test-only --branch rc jochym/spglib
-      script: GIT_BRANCH=rc conda build --token $ANACONDA_TOKEN conda
+      script: conda build --token $ANACONDA_TOKEN conda
       on:
         branch: rc
         tags: false
