--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ deploy:
 #        - conda build --token $ANACONDA_TOKEN conda
     - provider: script
       skip_cleanup: true
-      script: pwd ; conda info ; conda install conda-build --yes 
+      script: pwd ; conda info ; conda install conda-build --yes ; conda build --token $ANACONDA_TOKEN conda
       on:
         branch: rc
         tags: false
