Pass TRAVIS_BRANCH as GIT_BRANCH to meta.yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,9 @@ script:
     - python test_spglib.py
     - cd ..
 
+env:
+    - GIT_BRANCH=$TRAVIS_BRANCH
+
 deploy:
     # testing
     - provider: pypi
@@ -58,7 +61,7 @@ deploy:
 #        - conda build --token $ANACONDA_TOKEN conda
     - provider: script
       skip_cleanup: true
-      script: pwd ; conda info ; conda install conda-build --yes ; conda build --token $ANACONDA_TOKEN conda
+      script: pwd ; conda info ; conda install conda-build --yes ; conda build --no-anaconda-upload conda
       on:
         branch: rc
         tags: false
