--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ script:
     - cd ..
 
 deploy:
-    # testing
+    # testing pypi
     - provider: pypi
       server: https://testpypi.python.org/pypi
       skip_cleanup: true
@@ -52,15 +52,15 @@ deploy:
         tags: false
         python: 2.7
     
-    # testing 
+    # testing conda
     - provider: script
       skip_cleanup: true
       script: conda/anaconda_deploy.sh rc $ANACONDA_TOKEN $TRAVIS_BRANCH
       on:
         branch: rc
         tags: false
-#        python: 2.7
-    # production
+
+    # production pypi
     - provider: pypi
       skip_cleanup: true
       distributions: sdist
@@ -71,6 +71,7 @@ deploy:
         branch: master
         tags: false
         python: 2.7
+
     # production anaconda
     - provider: script
       skip_cleanup: true
@@ -78,4 +79,3 @@ deploy:
       on:
         branch: master
         tags: false
-        python: 2.7
