--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ python:
 cache: apt
 
 before_install:
-    - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+    - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
     - bash miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
     - conda update --yes conda
 
 install:
- #   - conda install --yes python=$TRAVIS_PYTHON_VERSION pip 
+    - conda install --yes python=$TRAVIS_PYTHON_VERSION pip 
     - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy
     - conda install --yes python=$TRAVIS_PYTHON_VERSION anaconda-client
     - conda install --yes python=$TRAVIS_PYTHON_VERSION anaconda-build
