Update to allow atoms on about the same position if their types are different

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,25 @@ set(CMAKE_C_FLAGS_DEBUG "-g")
 set(CMAKE_BUILD_TYPE Release)
 project(spglib C)
 include_directories("${PROJECT_SOURCE_DIR}/src")
-file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/*.c")
-
+set(SOURCES ${PROJECT_SOURCE_DIR}/src/arithmetic.c
+            ${PROJECT_SOURCE_DIR}/src/cell.c
+            ${PROJECT_SOURCE_DIR}/src/debug.c
+            ${PROJECT_SOURCE_DIR}/src/delaunay.c
+            ${PROJECT_SOURCE_DIR}/src/hall_symbol.c
+            ${PROJECT_SOURCE_DIR}/src/kgrid.c
+            ${PROJECT_SOURCE_DIR}/src/kpoint.c
+            ${PROJECT_SOURCE_DIR}/src/mathfunc.c
+            ${PROJECT_SOURCE_DIR}/src/niggli.c
+            ${PROJECT_SOURCE_DIR}/src/pointgroup.c
+            ${PROJECT_SOURCE_DIR}/src/primitive.c
+            ${PROJECT_SOURCE_DIR}/src/refinement.c
+            ${PROJECT_SOURCE_DIR}/src/site_symmetry.c
+            ${PROJECT_SOURCE_DIR}/src/sitesym_database.c
+            ${PROJECT_SOURCE_DIR}/src/spacegroup.c
+            ${PROJECT_SOURCE_DIR}/src/spg_database.c
+            ${PROJECT_SOURCE_DIR}/src/spglib.c
+            ${PROJECT_SOURCE_DIR}/src/spin.c
+            ${PROJECT_SOURCE_DIR}/src/symmetry.c)
 add_library(symspg SHARED ${SOURCES})
 set_target_properties(symspg PROPERTIES VERSION ${serial} SOVERSION ${soserial})
 set_property(TARGET symspg PROPERTY VERSION "1.9.7")
