--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,17 @@ set(CMAKE_MACOSX_RPATH 1)
 set(CMAKE_C_FLAGS_RELEASE "-Wall -O2")
 set(CMAKE_C_FLAGS_DEBUG "-g")
 set(CMAKE_BUILD_TYPE Release)
+
 project(spglib C)
+
+file(READ ${PROJECT_SOURCE_DIR}/src/version.h version_file)
+string(REGEX MATCH "SPGLIB_MAJOR_VERSION ([0-9]+)" spglib_major_version ${version_file})
+set(spglib_major_version ${CMAKE_MATCH_1})
+string(REGEX MATCH "SPGLIB_MINOR_VERSION ([0-9]+)" spglib_minor_version ${version_file})
+set(spglib_minor_version ${CMAKE_MATCH_1})
+string(REGEX MATCH "SPGLIB_MICRO_VERSION ([0-9]+)" spglib_micro_version ${version_file})
+set(spglib_micro_version ${CMAKE_MATCH_1})
+
 include_directories("${PROJECT_SOURCE_DIR}/src")
 set(SOURCES ${PROJECT_SOURCE_DIR}/src/arithmetic.c
             ${PROJECT_SOURCE_DIR}/src/cell.c
@@ -26,10 +36,9 @@ set(SOURCES ${PROJECT_SOURCE_DIR}/src/arithmetic.c
             ${PROJECT_SOURCE_DIR}/src/symmetry.c)
 add_library(symspg SHARED ${SOURCES})
 set_target_properties(symspg PROPERTIES VERSION ${serial} SOVERSION ${soserial})
-set_property(TARGET symspg PROPERTY VERSION "1.9.7")
+set_property(TARGET symspg PROPERTY VERSION "${spglib_major_version}.${spglib_minor_version}.${spglib_micro_version}")
 set_property(TARGET symspg PROPERTY SOVERSION 1 )
 install(TARGETS symspg LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/lib)
-
 add_library(symspg_static STATIC ${SOURCES})
 set_target_properties(symspg_static PROPERTIES VERSION ${serial} SOVERSION ${soserial})
 set_target_properties(symspg_static PROPERTIES OUTPUT_NAME symspg)
