--- a/python/conda/meta.yaml
+++ b/python/conda/meta.yaml
@@ -1,5 +1,6 @@
 package:
   name: spglib
+  version: version_from_shell
 # Manual version string. We use git describe in buildsh for version numbers.
 #  version: {{ environ.get('GIT_DESCRIBE_TAG', '') }}
 
