--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,18 @@ python:
 
 cache: apt
 
+matrix:
+  include:
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
+           PRE_CMD=linux32
+
 before_install:
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
       wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
@@ -38,11 +50,14 @@ install:
   - cat __nanoversion__.txt
   - ln -s ../src .
   - python setup.py install 
+  - docker pull $DOCKER_IMAGE
 
 script:
   - cd test
   - python -m unittest discover -b
   - cd ..
+  - docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/python/build-wheels.sh
+  - ls wheelhouse/
 
 deploy:
   # testing pypi
