--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,17 @@ python:
 
 cache: apt
 
-# matrix:
-#   include:
-#   - sudo: required
-#     services:
-#       - docker
-#     env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
-#   - sudo: required
-#     services:
-#       - docker
-#     env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
-#          PRE_CMD=linux32
+matrix:
+  include:
+  - sudo: required
+    services:
+    - docker
+    env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
+  - sudo: required
+    services:
+    - docker
+    env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
+         PRE_CMD=linux32
 
 before_install:
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
@@ -50,14 +50,15 @@ install:
   - cat __nanoversion__.txt
   - ln -s ../src .
   - python setup.py install 
-  # - docker pull $DOCKER_IMAGE
+  - cd ..
+  - docker pull $DOCKER_IMAGE
 
 script:
   - cd test
   - python -m unittest discover -b
   - cd ..
-  # - docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh
-  # - ls wheelhouse/
+  - docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh
+  - ls wheelhouse/
 
 deploy:
   # testing pypi
