--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,14 @@ matrix:
     env: DOCKER_DEPLOY=false
   - python: '3.6'
     env: DOCKER_DEPLOY=false
-  - sudo: required
+  - python: '2.7'
+    sudo: required
     services:
     - docker
     env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
          DOCKER_DEPLOY=true
-  - sudo: required
+  - python: '2.7'
+    sudo: required
     services:
     - docker
     env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
@@ -47,7 +49,7 @@ script:
       docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh;
       ls wheelhouse/;
     else
-      bash ./travis/script.sh
+      bash ./travis/script.sh;
     fi
 
 deploy:
