--- a/.travis.yml
+++ b/.travis.yml
@@ -27,21 +27,13 @@ matrix:
          DOCKER_DEPLOY=true
 
 before_install:
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
-    else
-      wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    fi
-  - echo $TRAVIS_PYTHON_VERSION
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - conda update --yes conda
+  - bash travis/before_install.sh
 
 install:
   - if [[ "$DOCKER_DEPLOY" == "true" ]]; then
       docker pull $DOCKER_IMAGE;
     else
-      bash ./travis/install.sh;
+      bash travis/install.sh;
     fi
 
 script:
@@ -49,7 +41,7 @@ script:
       docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh;
       ls wheelhouse/;
     else
-      bash ./travis/script.sh;
+      bash travis/script.sh;
     fi
 
 deploy:
