.travis.yml test

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
-sudo: required
 language: python
-#dist: trusty
+dist: trusty
 cache: apt
 
 matrix:
@@ -18,15 +17,15 @@ matrix:
     env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
          PRE_CMD=linux32
          DOCKER_DEPLOY=true
-  - python: '2.7'
-    sudo: false
-    env: DOCKER_DEPLOY=false
-  - python: '3.5'
-    sudo: false
-    env: DOCKER_DEPLOY=false
-  - python: '3.6'
-    sudo: false
-    env: DOCKER_DEPLOY=false
+  # - python: '2.7'
+  #   sudo: false
+  #   env: DOCKER_DEPLOY=false
+  # - python: '3.5'
+  #   sudo: false
+  #   env: DOCKER_DEPLOY=false
+  # - python: '3.6'
+  #   sudo: false
+  #   env: DOCKER_DEPLOY=false
 
 before_install:
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
