--- a/.travis.yml
+++ b/.travis.yml
@@ -30,23 +30,23 @@ before_install:
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
     bash travis/before_install.sh;
     export PATH="$HOME/miniconda/bin:$PATH";
-  else
-    cd python
-    docker pull $DOCKER_IMAGE;
-    docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh;
-    cd ..
   fi
 
 install:
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
     bash travis/install.sh;
+  else
+    docker pull $DOCKER_IMAGE;
   fi
 
 script:
-- if [[ "$DOCKER_DEPLOY" == "true" ]]; then
-    ls wheelhouse/;
-  else
+- if [[ "$DOCKER_DEPLOY" == "false" ]]; then
     bash travis/script.sh;
+  else
+    cd python;
+    docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh;
+    ls wheelhouse/;
+    cd ..
   fi
 
 before_deploy:
