--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ script:
     bash travis/script.sh;
   else
     cd python;
-    docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh;
+    docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/build-wheels.sh;
     ls wheelhouse/;
     cd ..;
   fi
