--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ script:
     bash travis/script.sh;
   else
     cd python;
+    cp -a ../src .
     docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/build-wheels.sh;
     ls wheelhouse/;
     cd ..;
