--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,8 @@ script:
     ls;
     mkdir dist;
     cp wheelhouse/spglib* dist/;
+    ./get_nanoversion.sh;
+    pip install numpy twine
     cd ..;
   fi
 
