--- a/.travis.yml
+++ b/.travis.yml
@@ -44,14 +44,14 @@ script:
     bash travis/script.sh;
   else
     cd python;
+    ./get_nanoversion.sh;
+    cat __nanoversion__.txt;
     cp -a ../src .;
     docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/build-wheels.sh;
     ls wheelhouse/;
-    ls;
     mkdir dist;
     cp wheelhouse/spglib* dist/;
-    ./get_nanoversion.sh;
-    cat __nanoversion__.txt;
+    ls dist/;
     cd ..;
     pip install numpy twine;
   fi
