--- a/.travis.yml
+++ b/.travis.yml
@@ -27,16 +27,19 @@ matrix:
   #        TRAVIS_PYTHON_VERSION=3.6'
 
 before_install:
-- if [[ "$DOCKER_DEPLOY" == "false" ]]; then
-    bash travis/before_install.sh;
-    export PATH="$HOME/miniconda/bin:$PATH";
-  fi
+- bash travis/before_install.sh;
+  export PATH="$HOME/miniconda/bin:$PATH";
+  cd python;
+  git branch -v;
+  git describe --tags --dirty;
+  ./get_nanoversion.sh;
+  cat __nanoversion__.txt;
+  cd ..;
 
 install:
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
     bash travis/install.sh;
   else
-    pip install numpy twine;
     docker pull $DOCKER_IMAGE;
   fi
 
@@ -45,8 +48,6 @@ script:
     bash travis/script.sh;
   else
     cd python;
-    ./get_nanoversion.sh;
-    cat __nanoversion__.txt;
     cp -a ../src .;
     docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/build-wheels.sh;
     ls wheelhouse/;
