--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ matrix:
     - docker
     env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
          DOCKER_DEPLOY=true
+         TRAVIS_PYTHON_VERSION=2.7'
   # - python: '2.7'
   #   sudo: required
   #   services:
@@ -13,6 +14,7 @@ matrix:
   #   env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
   #        PRE_CMD=linux32
   #        DOCKER_DEPLOY=true
+  #        TRAVIS_PYTHON_VERSION=2.7'
   # - python: '2.7'
   #   sudo: false
   #   env: DOCKER_DEPLOY=false
