--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,16 @@ matrix:
          TRAVIS_PYTHON_VERSION='3.6'
 
 before_install:
-- bash travis/before_install.sh;
+- if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+    wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+  else
+    wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+  fi;
+  echo $TRAVIS_PYTHON_VERSION;
+  bash miniconda.sh -b -p $HOME/miniconda;
+  export PATH="$HOME/miniconda/bin:$PATH";
+  conda update --yes conda;
+  conda install --no-update-deps --yes python="$TRAVIS_PYTHON_VERSION" pip numpy;
   export PATH="$HOME/miniconda/bin:$PATH";
   cd python;
   git branch -v;
@@ -36,14 +45,27 @@ before_install:
 
 install:
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
-    bash travis/install.sh;
+    aclocal;
+    autoheader;
+    libtoolize;
+    touch INSTALL NEWS README AUTHORS;
+    automake -acf;
+    autoconf;
+    ./configure;
+    make check;
+    cd python;
+    ln -s ../src .;
+    python setup.py install ;
+    cd ..;
   else
     docker pull $DOCKER_IMAGE;
   fi
 
 script:
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
-    bash travis/script.sh;
+    cd python/test;
+    python -m unittest discover -b;
+    cd ../..;
   else
     cd python;
     cp -a ../src .;
