--- a/python/conda/meta.yaml
+++ b/python/conda/meta.yaml
@@ -1,25 +1,16 @@
 package:
   name: spglib
   version: version_from_shell
-# Manual version string. We use git describe in buildsh for version numbers.
-#  version: {{ environ.get('GIT_DESCRIBE_TAG', '') }}
 
 source:
   git_url: https://github.com/atztogo/spglib.git
   git_branch: {{ environ.get('GIT_BRANCH','master') }}
 
-# Lock to particular tag. We always test HEAD and build and upload tags
-# so to manual tak is necessary here
-#  git_tag: v1.9.0
-#  patches:
-   # List any patch files here
-   # - fix.patch
-
 build:
   script_env:
     - GIT_BRANCH
-  preserve_egg_dir: True
-# entry_points:
+  #  preserve_egg_dir: True
+  # entry_points:
     # Put any entry points (scripts to be generated automatically) here. The
     # syntax is module:function.  For example
     #
