--- a/python/MANIFEST.in
+++ b/python/MANIFEST.in
@@ -1,5 +1,6 @@
 include src/*.h
 include src/*.c
 include __nanoversion__.txt
+include examples/*.py
 recursive-include test *
 recursive-exclude test *.pyc
