--- a/.travis.yml
+++ b/.travis.yml
@@ -30,19 +30,19 @@ before_install:
   else
     wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   fi;
-  echo $TRAVIS_PYTHON_VERSION;
-  bash miniconda.sh -b -p $HOME/miniconda;
-  export PATH="$HOME/miniconda/bin:$PATH";
-  conda update --yes conda;
-  conda update --all --yes;
-  conda install --no-update-deps --yes python="$TRAVIS_PYTHON_VERSION" pip numpy;
-  export PATH="$HOME/miniconda/bin:$PATH";
-  cd python;
-  git branch -v;
-  git describe --tags --dirty;
-  ./get_nanoversion.sh;
-  cat __nanoversion__.txt;
-  cd ..;
+- echo $TRAVIS_PYTHON_VERSION
+- bash miniconda.sh -b -p $HOME/miniconda
+- export PATH="$HOME/miniconda/bin:$PATH"
+- conda update --yes conda
+- conda update --all --yes
+- conda install --no-update-deps --yes python="$TRAVIS_PYTHON_VERSION" pip numpy
+- export PATH="$HOME/miniconda/bin:$PATH"
+- cd python
+- git branch -v
+- git describe --tags --dirty
+- ./get_nanoversion.sh
+- cat __nanoversion__.txt
+- cd ..
 
 install:
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
