--- a/.travis.yml
+++ b/.travis.yml
@@ -46,10 +46,11 @@ before_install:
 
 install:
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
-    cd python;
-    ln -s ../src .;
-    python setup.py install ;
-    cd ..;
+    # cd python;
+    # ln -s ../src .;
+    # python setup.py install ;
+    # cd ..;
+    ;
   else
     docker pull $DOCKER_IMAGE;
   fi
@@ -57,10 +58,11 @@ install:
 script:
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
     # if [[ "$TRAVIS_BRANCH" != "rc" ]] || [[ "$TRAVIS_BRANCH" != "master" ]]; then
-      cd python;
-      python setup.py test;
-      cd ..;
+    #   cd python;
+    #   python setup.py test;
+    #   cd ..;
     # fi
+    ;
   else
     cd python;
     cp -a ../src .;
