--- a/.travis.yml
+++ b/.travis.yml
@@ -25,34 +25,37 @@ matrix:
          TRAVIS_PYTHON_VERSION='3.6'
 
 before_install:
-- if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-    wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
-  else
-    wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-  fi;
-- echo $TRAVIS_PYTHON_VERSION
-- bash miniconda.sh -b -p $HOME/miniconda
-- export PATH="$HOME/miniconda/bin:$PATH"
-- conda update --yes conda
-- conda update --all --yes
-- conda install --no-update-deps --yes python="$TRAVIS_PYTHON_VERSION" pip numpy
-- export PATH="$HOME/miniconda/bin:$PATH"
-- cd python
-- git branch -v
-- git describe --tags --dirty
-- ./get_nanoversion.sh
-- cat __nanoversion__.txt
-- cd ..
+- echo "DOCKER_DEPLOY: $DOCKER_DEPLOY"
+- echo "TRAVIS_BRANCH: $TRAVIS_BRANCH"
+- echo "TRAVIS_PYTHON_VERSION: $TRAVIS_PYTHON_VERSION"
 
 install:
 - if [[ "$DOCKER_DEPLOY" != "false" ]]; then
-    docker pull $DOCKER_IMAGE;
+    if [[ "$TRAVIS_BRANCH" == "rc" ]] || [[ "$TRAVIS_BRANCH" == "master" ]]; then
+      docker pull $DOCKER_IMAGE;
+    fi
   fi
 
 script:
 - if [[ "$DOCKER_DEPLOY" == "false" ]]; then
     if [[ "$TRAVIS_BRANCH" != "rc" ]] || [[ "$TRAVIS_BRANCH" != "master" ]]; then
+      if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+        wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+      else
+        wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+      fi;
+      echo $TRAVIS_PYTHON_VERSION;
+      bash miniconda.sh -b -p $HOME/miniconda;
+      export PATH="$HOME/miniconda/bin:$PATH";
+      conda update --yes conda;
+      conda update --all --yes;
+      conda install --no-update-deps --yes python="$TRAVIS_PYTHON_VERSION" pip numpy;
+      export PATH="$HOME/miniconda/bin:$PATH";
       cd python;
+      git branch -v;
+      git describe --tags --dirty;
+      ./get_nanoversion.sh;
+      cat __nanoversion__.txt;
       python setup.py test;
       cd ..;
     fi
