--- a/.travis.yml
+++ b/.travis.yml
@@ -25,14 +25,22 @@ matrix:
          TRAVIS_PYTHON_VERSION='3.6'
 
 before_install:
-- echo "DOCKER_DEPLOY: $DOCKER_DEPLOY"
-- echo "TRAVIS_BRANCH: $TRAVIS_BRANCH"
-- echo "TRAVIS_PYTHON_VERSION: $TRAVIS_PYTHON_VERSION"
+- echo $DOCKER_DEPLOY
+- echo $TRAVIS_BRANCH
+- echo $TRAVIS_PYTHON_VERSION
 
 install:
 - if [[ "$DOCKER_DEPLOY" != "false" ]]; then
     if [[ "$TRAVIS_BRANCH" == "rc" ]] || [[ "$TRAVIS_BRANCH" == "master" ]]; then
       docker pull $DOCKER_IMAGE;
+      cd python;
+      cp -a ../src .;
+      docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/build-wheels.sh;
+      ls wheelhouse/;
+      mkdir dist;
+      cp wheelhouse/spglib* dist/;
+      ls dist/;
+      cd ..;
     fi
   fi
 
@@ -59,15 +67,6 @@ script:
       python setup.py test;
       cd ..;
     fi
-  else
-    cd python;
-    cp -a ../src .;
-    docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/build-wheels.sh;
-    ls wheelhouse/;
-    mkdir dist;
-    cp wheelhouse/spglib* dist/;
-    ls dist/;
-    cd ..;
   fi
 
 before_deploy:
