--- a/.travis.yml
+++ b/.travis.yml
@@ -45,25 +45,28 @@ install:
   fi
 
 script:
-- if [[ "$DOCKER_DEPLOY" == "false" ]]; then
-    if [[ "$TRAVIS_BRANCH" != "rc" ]] || [[ "$TRAVIS_BRANCH" != "master" ]]; then
-      if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-        wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
-      else
-        wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-      fi;
-      echo $TRAVIS_PYTHON_VERSION;
-      bash miniconda.sh -b -p $HOME/miniconda;
-      export PATH="$HOME/miniconda/bin:$PATH";
-      conda update --yes conda;
-      conda update --all --yes;
+- if [[ "$TRAVIS_BRANCH" != "rc" ]] || [[ "$TRAVIS_BRANCH" != "master" ]]; then
+    if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi;
+    echo $TRAVIS_PYTHON_VERSION;
+    bash miniconda.sh -b -p $HOME/miniconda;
+    export PATH="$HOME/miniconda/bin:$PATH";
+    conda update --yes conda;
+    conda update --all --yes;
+    cd python;
+    git branch -v;
+    git describe --tags --dirty;
+    ./get_nanoversion.sh;
+    cat __nanoversion__.txt;
+    cd ..;
+    if [[ "$DOCKER_DEPLOY" == "false" ]]; then
+      conda install --no-update-deps --yes python="$TRAVIS_PYTHON_VERSION" pip;
+    else
       conda install --no-update-deps --yes python="$TRAVIS_PYTHON_VERSION" pip numpy;
-      export PATH="$HOME/miniconda/bin:$PATH";
       cd python;
-      git branch -v;
-      git describe --tags --dirty;
-      ./get_nanoversion.sh;
-      cat __nanoversion__.txt;
       python setup.py test;
       cd ..;
     fi
