--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ script:
     ./get_nanoversion.sh;
     cat __nanoversion__.txt;
     cd ..;
-    if [[ "$DOCKER_DEPLOY" == "false" ]]; then
+    if [[ "$DOCKER_DEPLOY" != "false" ]]; then
       conda install --no-update-deps --yes python="$TRAVIS_PYTHON_VERSION" pip;
     else
       conda install --no-update-deps --yes python="$TRAVIS_PYTHON_VERSION" pip numpy;
