--- a/.travis.yml
+++ b/.travis.yml
@@ -28,23 +28,6 @@ before_install:
 - echo $DOCKER_DEPLOY
 - echo $TRAVIS_BRANCH
 - echo $TRAVIS_PYTHON_VERSION
-
-install:
-- if [[ "$DOCKER_DEPLOY" != "false" ]]; then
-    if [[ "$TRAVIS_BRANCH" == "rc" ]] || [[ "$TRAVIS_BRANCH" == "master" ]]; then
-      docker pull $DOCKER_IMAGE;
-      cd python;
-      cp -a ../src .;
-      docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/build-wheels.sh;
-      ls wheelhouse/;
-      mkdir dist;
-      cp wheelhouse/spglib* dist/;
-      ls dist/;
-      cd ..;
-    fi
-  fi
-
-script:
 - if [[ ("$TRAVIS_BRANCH" != "rc" || "$TRAVIS_BRANCH" != "master") && "$DOCKER_DEPLOY" == "false" || ("$TRAVIS_BRANCH" == "rc" || "$TRAVIS_BRANCH" == "master") && "$DOCKER_DEPLOY" != "false" ]]; then
     if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
       wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
@@ -66,10 +49,29 @@ script:
       conda install --no-update-deps --yes python="$TRAVIS_PYTHON_VERSION" pip;
     else
       conda install --no-update-deps --yes python="$TRAVIS_PYTHON_VERSION" pip numpy;
+    fi
+  fi
+
+install:
+- if [[ "$DOCKER_DEPLOY" != "false" ]]; then
+    if [[ "$TRAVIS_BRANCH" == "rc" ]] || [[ "$TRAVIS_BRANCH" == "master" ]]; then
+      docker pull $DOCKER_IMAGE;
       cd python;
-      python setup.py test;
+      cp -a ../src .;
+      docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/build-wheels.sh;
+      ls wheelhouse/;
+      mkdir dist;
+      cp wheelhouse/spglib* dist/;
+      ls dist/;
       cd ..;
     fi
+  fi
+
+script:
+- if [[ ("$TRAVIS_BRANCH" != "rc" || "$TRAVIS_BRANCH" != "master") && "$DOCKER_DEPLOY" == "false" ]]; then
+    cd python;
+    python setup.py test;
+    cd ..;
   fi
 
 before_deploy:
