--- a/python/conda/meta.yaml
+++ b/python/conda/meta.yaml
@@ -32,6 +32,10 @@ requirements:
     - python
     - numpy
 
+  requires:
+    - python
+    - numpy
+
 #  commands:
     # You can put test commands to be run here.  Use this to test that the
     # entry points work.
